Pseudo-Labeling/results/ipslab2013v1_cifar10-4k_23-03-31-04-25.txt
Traceback (most recent call last):
  File "/content/drive/.shortcut-targets-by-id/1rq7ZwO6n9Qq8z-u9Ls5ROqESUr9unPFF/AdversarialAI/Pseudo-Labeling/main.py", line 8, in <module>
    from utils import datasets
  File "/content/drive/.shortcut-targets-by-id/1rq7ZwO6n9Qq8z-u9Ls5ROqESUr9unPFF/AdversarialAI/Pseudo-Labeling/utils/datasets.py", line 136
    I revised the version:
      ^
SyntaxError: invalid syntax
